<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Doomsday Quiz</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Quiz</string>
    <string name="title_section2">Cheatsheet</string>
    <string name="title_section3">Options</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="quiz_this_year">Quiz about just this year</string>

</resources>
